# template-whatsapp

./: .bashrc.example  .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  README_ctrader.md  README_developer.md  mypy.ini  pyproject.toml
data/input/: attachment_text.txt  contacts1.txt  contacts2.txt  contacts3.txt  contacts4.txt  message1.txt  message2.txt
notebooks/ctrader/: get_assets.ipynb  parse_trade_order.ipynb  parse_trade_position.ipynb  read_config_yaml.ipynb  test_FIX.ipynb  twisted_callback.ipynb
notebooks/order/: cTraderFixPy.ipynb  cTrader_OpenAPIPy.ipynb  ctrader.ipynb  order.ipynb  order.py.ipynb  test_FIX.ipynb
notebooks/selenium/: selenium_hello_world.ipynb
src/api/: __init__.py  main.py  schemas.py
src/cli/: __init__.py  cli_read_messages.py  cli_send_message.py
src/configs/: .gitignore  __init__.py  assets.json  assets.py  ctrader.py  ctrader_example.py  settings.py
src/ctrader/: __init__.py  buffer.py  ctrader.py  fix.py
src/ctrader_fix_asyncio/: __init__.py  broker.py  original_run_fixapi.py
src/trading/: __init__.py  order.py  order_InvestorsWizard.py  order_ParamountInfoTech.py  order_PipsGainer.py  order_base.py  parse_General.py  parse_InvestorsWizard.py  parse_ParamountInfoTech.py  parse_PipsGainer.py  parse_PipsGainer_v1.py  parse_PipsGainer_v2.py  parse_PipsGainer_v3.py
src/utils/: __init__.py  logger.py  sum.py
src/whatsapp/: __init__.py  message.py  read_messages.py  send_message.py  web_driver.py
tests/: test_our_python_module.py  test_python_functions.py
(+8 files in other folders)
