[tool.poetry]
name = "app"
version = "0.1.0"
description = "template for Docker with Whatsapp"
authors = ["Adrian Buzatu"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.24.2"
pandas = "^1.5.3"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"
ipython = "^8.11.0"
python-dotenv = {extras = ["cli"], version = "^1.0.0"}
pytest = "^7.2.2"
black = "^23.1.0"
flake8 = "^6.0.0"
mypy = "^1.1.1"
pydocstyle = "^6.3.0"
jupyter = "^1.0.0"
coloredlogs = "^15.0.1"
fastapi = "^0.95.0"
uvicorn = "^0.21.1"
fastapi-utils = "^0.2.1"
streamlit = "^1.20.0"
scikit-learn = "^1.2.2"
bokeh = "2.4.3"
selenium = "^4.8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
